fix: align menu_btn

--- a/src/styles/partials/header.styl
+++ b/src/styles/partials/header.styl
@@ -65,8 +65,8 @@ header
   #menu_btn
     z-index: 99999
     position: absolute
-    top: 32px
-    right: 16px
+    top: $spacing.md
+    right: $spacing.sm
 
   +mobile()
     max-height: 68px
